<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Skillar</string>
    <string name="title_activity_healthy_life">Healthy Life</string>
    <string name="title_activity_skills">Life Skills</string>
    <string name="title_home">HealthyBeing</string>
    <string name="title_dashboard">Hygiene</string>
    <string name="title_notifications">Healthy Food</string>
    <string name="skill">Skill</string>
    <string name="goals">Goal Setting</string>
    <string name="problem">Problem Solving</string>
    <string name="creative">Creative Thinking</string>
    <string name="leadership">Leadership</string>
    <string name="communications">Effective Communication</string>
    <string name="assertiveness">Assertiveness</string>
    <string name="conflict">Conflict Management</string>
    <string name="team">Teamwork</string>
    <string name="stress">Stress Management</string>
    <string name="awareness">Self Awareness</string>
    <string name="negotiation">Negotiation</string>
    <string name="time">Time Management</string>
    <string name="decision">Decision Making</string>
    <string name="relationships">Managing Relationships</string>
    <string name="pressure">Peer Pressure</string>
    <string name="substance">Substance Abuse</string>
    <string name="financial_skills">Financial Skills</string>
    <string name="positive_life">Positive Life</string>
    <string name="healthy_lifestyle">Healthy Lifestyle</string>
    <string name="learning_tips">Learning Tips</string>
    <string name="career_advice">Career Advice</string>
    <string name="wisdom">Wisdom 4 Lyf</string>
    <string name="volunteering">Volunteering</string>
    <string name="etiquette">Etiquette</string>
    <string name="mentorship">Mentorship</string>
    <string name="training">Training</string>
    <string name="infection_control">Infection Control</string>
    <string name="title_activity_main">Skillar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">\'Equipping youths 4 a fulfilling life\'</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="nav_life">Lyf Skillz</string>
    <string name="nav_positive">Positive Lyfstyle</string>
    <string name="nav_credits">Credits</string>
    <string name="nav_essentials">Lyf Essentialz</string>
    <string name="nav_share">Share</string>
    <string name="nav_mad">Go M.A.D</string>
    <string name="nav_learn">Continuous Learner</string>
    <string name="cashback">Ca$hBack</string>
    <string name="nav_about">About</string>

    <string name="privacy_policy">Privacy Policy</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="app_info">About Skillar</string>
    <string name="dis_content">The users acknowledge that the use of this service is made at their own discretion and risk,
        thus holding IT harmless of all liability. IT neither holds or is responsible for the content to which
        the user has access through this service. IT may not be held liable for any failures in the display of content, Internet connections, viruses, etc. that
        may pose a threat to your device.</string>
    <string name="about_content">Skillar is an application for Android devices that equips users with skill &amp; information
        to live a fulfilling life.
        </string>
    <string name="privacy_content">We collect certain personal information that you voluntarily provide to us. For example,
        we maybe collect your name and/or and email address when you contact us by email. When you interact with the app,
        we collect information such as the language you use on the application, your device type and version, browsing
        activity, location and other technical data relating to your device. This information is only used to assist us in
        providing effective service.</string>
    <string name="about_developer">About The Developer</string>
    <string name="developer_content">To find more about the developer visit us on https://www.infixustech.co.zw/</string>
    <string name="critical">Critical Thinking</string>
    <string name="tab_1">Notes</string>
    <string name="tab_2">Activities</string>
    <string name="tab_3">Exercise</string>
    <string name="skillz">Lyf Skillz</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ex1">What are your lifetime goals? List them in order of priority starting with the highest priority.\n 1. ………………………………………………………\n 2. ………………………………………………………\n 3. ………………………………………………………</string>
    <string name="lf">The first step in setting personal goals is to consider what you want to achieve in your lifetime (or by a time at least, say, 10 years in the future) as setting Lifetime Goals gives you the overall perspective that shapes all other aspects of your decision making.</string>
    <string name="ex2">State your expected achievements within the next ten years.\n"
                "1.\t………………………………………………………..\n"
                "2.\t………………………………………………………..\n"
                "3.\t……………………………………………………….\n"
                "\n"
                "To give a broad, balanced coverage of all-important areas in your life try to set goals in some of these categories (or in categories of your own, where these are important to you):\n" +
                "Artistic:\n" +
                "Do you want to achieve any artistic goals? If so, what?\n" +
                "\n" +
                "Attitude:\n" +
                "Is there any part of your mindset holding you back? Is there any part of the way that you behave that upsets you? If so, set a goal to improve your behaviour or find a solution to the problem.\n" +
                "\n" +
                "Career:\n" +
                "What level do you want to reach in your career?\n" +
                "\n" +
                "Education;\n" +
                "Is there any knowledge you want to acquire in particular? What information and skills you need to achieve other goals?\n" +
                "\n" +
                "Family:\n" +
                "Do you want to be a parent? If so, how are you going to be a good parent? How do you want to be seen by a partner or by members of your extended family?\n" +
                "\n" +
                "Financial: \n" +
                "How much do you want to earn and by what stage?\n"
                "\n" +
                "Physical:\n" +
                "Are there any athletic goals you want to achieve, or do you want good health deep into old age? What steps are going to take to achieve this?\n" +
                "\n"
                "Pleasure:\n"
                "How do you want to enjoy yourself? You should ensure that some of your life for you!\n"
                "\n"
                "Public Service:\n"
                "Do you want to make the world a better place? If so, how?\n</string>
</resources>