<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_healthy">

    <fragment
        android:id="@+id/nav_healthy"
        android:name="@string/title_notifications"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_hygiene"
        android:name="@string/title_notifications"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_food"
        android:name="@string/title_notifications"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>