<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardUseCompatPadding="true"
            app:contentPadding="4dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="2dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="2dp"
                    android:padding="2dp"
                    android:text="@string/app_info"
                    android:textAlignment="viewStart"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="#000"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="8dp"
                    android:padding="2dp"
                    android:text="@string/about_content"
                    android:textColor="#000"
                    android:textAlignment="textStart"
                    android:textSize="20sp"
                    android:textAppearance="?android:textAppearanceSmall"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="2dp"
                    android:padding="2dp"
                    android:text="@string/disclaimer"
                    android:textStyle="bold"
                    android:textAlignment="viewStart"
                    android:textSize="28sp"
                    android:textColor="#000"
                    android:textAppearance="?android:textAppearanceMedium"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="8dp"
                    android:padding="2dp"
                    android:text="@string/dis_content"
                    android:textColor="#000"
                    android:textAlignment="textStart"
                    android:textSize="20sp"
                    android:textAppearance="?android:textAppearanceSmall"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginEnd="8dp"
                    android:padding="2dp"
                    android:text="@string/privacy_policy"
                    android:textStyle="bold"
                    android:textAlignment="viewStart"
                    android:textSize="28sp"
                    android:textColor="#000"
                    android:textAppearance="?android:textAppearanceMedium" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="8dp"
                    android:padding="2dp"
                    android:text="@string/privacy_content"
                    android:textColor="#000"
                    android:textAlignment="textStart"
                    android:textSize="20sp"
                    android:textAppearance="?android:textAppearanceSmall" />
           <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginEnd="8dp"
                    android:padding="2dp"
                    android:text="@string/about_developer"
                    android:textStyle="bold"
                    android:textAlignment="viewStart"
                    android:textSize="28sp"
                    android:textColor="#000"
                    android:textAppearance="?android:textAppearanceMedium" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="8dp"
                    android:padding="2dp"
                    android:text="@string/developer_content"
                    android:textColor="#000"
                    android:textAlignment="textStart"
                    android:textSize="20sp"
                    android:textAppearance="?android:textAppearanceSmall" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>